--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@types/node": "^20.4.8",
     "typescript": "^5.1.6"
   },
-  "homepage": "https://github.com/vrn-tec/vrn-logger",
+  "homepage": "https://github.com/vrn-dev/vrn-logger",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vrn-tec/vrn-logger.git"
+    "url": "https://github.com/vrn-dev/vrn-logger.git"
   }
 }
