--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vrn-dev/vrn-logger.git"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
